# NutriScan

./: .replit  app.py  pyproject.toml
attached_assets/: NutriVision_Abstract_Rewritten.docx  Pasted--Best-Future-Features-for-App-Success-1-Real-Time-Food-Recognition-via-Camera-Live-camera-based-foo-1748712687729.txt
data/: food_classes.py
models/: food_classifier.py
utils/: image_processor.py  nutrition_api.py
